--- a/assets/food.html
+++ b/assets/food.html
@@ -53,7 +53,7 @@
 
 
     <div class="shoppingdeal">
-        <img src="../images/food-deal.png" class="shoppingdealpic" alt="">
+        <img src="../images/food-deal.png" class="shoppingdealpic" alt="shopping deal pic">
     </div>
 
     <div class="itemarea">
